lib/libremidi/tests/corpus/Invalid/No Header Chunk/Africa3.mid
vti_encoding:SR|utf8
vti_extenderversion:SR|2.0.2.1112
vti_author:SR|Signer
vti_modifiedby:SR|Signer
vti_timecreated:TR|03 Jan 1999 10:41:36 +0100
vti_timelastmodified:TR|03 Jan 1999 10:41:36 +0100
